--- a/index.html
+++ b/index.html
@@ -10,27 +10,22 @@
     <script src="assets/javascript/game.js"></script>
 </head>
 <body>
-    <div class="gameTitle">
-        <h1>Guess Brain Anatomy!!</h1>    
-    </div>
-
-    <div class="gameInstructions">
-    <h5>You get 11 guesses to identify the brain part. You don't use up a guess if you find a letter that's in the part. No penalty for guessing a letter you have already guessed. I'll keep track of your wins. You can play up to ten times.</h5>
-    <h5>Game starts when you press your first guess! No Caps!</h5>
-    </div>
-
-    <div>
-    <br>
-    <h2>WINS: </h2>
-    <h2>LOSSES: </h2>
-    <br>
-    <br>
-    <h2>THIS GAME</h2>
-
-    <h3>WORD I'M THINKING OF: </h3>
-
-    <h4>GUESSES REMAINING: </h4>
-    <h4>ALREADY GUESSED: </h4>
+    <h1>Guess Brain Anatomy!</h1>
+    <div id=gamefield>
+        <div class="gameInstructions">
+            <h5>You get 11 guesses to identify the brain part. You don't use up a guess if you find a letter that's in the part. No penalty for guessing a letter you have already guessed. I'll keep track of your wins. You can play up to ten times.</h5>
+            <h5>Game starts when you press your first guess! No Caps!</h5>
+        </div>
+        <div id=statsbox>
+            <h3 id=wins>WINS: </h3>
+            <h3 id=losses>LOSSES: </h3>
+            <h3 id=gameNumber>GAMES PLAYED: </h3>
+        </div>
+        <div id=currentGame>
+            <h3 id=currentWord>BRAIN PART: -_-_-_-_-_-_-</h3>
+            <h3 id=lettersGuessed>LETTERS GUESSED SO FAR: -_-_-_-_-_-_-</h3>
+            <h3 id=guessesLeft>GUESSES LEFT: </h3>
+        </div>
     </div>
 
 
