--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
 <body>
     <h1>Guess Brain Anatomy!</h1>
     <hr>
-    <div id=gamefield>
+    <div id="gamefield">
         <div id="gameInstructions">
             <h3>INSTRUCTIONS</h3>
             <h4>You get ten guesses to identify the brain part. You don't use up a guess if you find a letter that's in the part; but you do use up a guess if you re-enter a letter you have already guessed; so, I will keep track for you. I'll also log the score. You can play up to ten times.</h4>
             <h4>Game starts when you enter your first guess!</h4>
             <br>
             <hr>
-            <h3 id=winsH>WINS: 0</h3>
-            <h3 id=lossesH>LOSSES: 0</h3>
+            <h3 id="winsH">WINS: 0</h3>
+            <h3 id="lossesH">LOSSES: 0</h3>
         </div>
-        <div id=currentGame>
+        <div id="currentGame">
             <h2 style="text-align:center">BRAIN PART</h2>
-            <h2 id=currentWordH></h2>
+            <h2 id="currentWordH"></h2>
             <hr>
             <h4>HINT</h4>
-            <img alt="hintImage" src="assets/images/AC.jpg" height="85%" width="85%">
+            <img id="hintImageH" alt="hintImage" height="85%" width="85%">
         </div>
-        <div id=gameStats>
+        <div id="gameStats">
             <h3>WRONG LETTERS GUESSED: </h3>
-            <h3 id=lettersGuessedH> </h3>
+            <h3 id="lettersGuessedH"> </h3>
             <hr>
-            <h3 id=guessesLeftH>GUESSES LEFT: 10</h3>
+            <h3 id="guessesLeftH">GUESSES LEFT: 10</h3>
         </div>
     </div>
     <div id=footer>
