--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
-    <script src="assets/javascript/game.js"></script>
 </head>
 <body>
     <h1>Guess Brain Anatomy!</h1>
@@ -26,7 +25,7 @@
             <h2 style="text-align:center">BRAIN PART</h2>
             <h2 id="currentWordH"></h2>
             <hr>
-            <h4>HINT</h4>
+            <h4>HINT (Yellow arrow)</h4>
             <img id="hintImageH" alt="hintImage" height="85%" width="85%">
         </div>
         <div id="gameStats">
@@ -39,7 +38,7 @@
     <div id=footer>
         <h6>&copy; 2018  Kamran Sahrakar</h6>
     </div>
-
-
 </body>
+
+<script src="assets/javascript/game.js"></script>
 </html>
