--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="gamefield">
         <div id="gameInstructions">
             <h3>INSTRUCTIONS</h3>
-            <h4>You get ten guesses to identify the brain part. You don't use up a guess if you find a letter that's in the part; but you do use up a guess if you re-enter a letter you have already guessed; so, I will keep track for you. I'll also log the score. You can play up to ten times.</h4>
+            <h4>You get ten guesses to identify the brain part. You don't use up a guess if you find a letter that's in the part. I will keep track for you. I'll also log the score. You can play up to ten times.</h4>
             <h4>Game starts when you enter your first guess!</h4>
             <br>
             <hr>
@@ -23,7 +23,7 @@
         </div>
         <div id="currentGame">
             <h2 style="text-align:center">BRAIN PART</h2>
-            <h2 id="currentWordH"></h2>
+            <h3 id="currentWordH"></h3>
             <hr>
             <h4>HINT (Yellow arrow)</h4>
             <img id="hintImageH" alt="hintImage" height="85%" width="85%">
